# machine-learning

./: .gitignore  README.md  pyproject.toml
machinelearning/: __init__.py
machinelearning/apps/toy_models/: README.md  launcher.sh  main.py
machinelearning/apps/toy_models/configs/: mnist.yaml  titanic.yaml  yahoo_finance.yaml
machinelearning/apps/toy_models/launchers/: launcher.sh  main_dev.py
machinelearning/apps/toy_models/orchestrators/: ml_orchestrator.py
machinelearning/modules/stages/data/: yahoo_finance_etl.py
machinelearning/modules/stages/models/: ffnn_model.py
machinelearning/modules/time_series/: arima_model.py  temporal_validation_split.py  time_series_feature_engineering.py  time_series_xy_split.py
scripts/: build_project.sh  deploy.sh
tests/: conftest.py
