[project]
name = "machine-learning"
version = "0.1.0"
description = "Personal ML engineering framework — unified repo for apps and shared modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machinelearning"]

[project.scripts]
# Register app entrypoints here as apps are added:
# titanic   = "machinelearning.apps.titanic.main:main"
# finance   = "machinelearning.apps.personal_finance.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

