[project]
name = "machine-learning"
version = "0.1.0"
description = "Personal ML engineering framework — unified repo for apps and shared modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "statsmodels>=0.14",
    "yfinance>=0.2",
    "category_encoders>=2.6",
    "tabulate>=0.9",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "optuna>=3.0",
    "wandb>=0.15",
    "eigenframework",
]

[tool.uv.sources]
eigenframework = { path = "../eigenframework", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machinelearning"]

[project.scripts]
# Register app entrypoints here as apps are added:
# titanic   = "machinelearning.apps.titanic.main:main"
# finance   = "machinelearning.apps.personal_finance.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
